Fix x-overflow

--- a/src/app/pages/user-profile-page/user-profile-page.scss
+++ b/src/app/pages/user-profile-page/user-profile-page.scss
@@ -53,7 +53,7 @@
 
     .create-post-button {
       align-self: center;
-      margin-bottom: 50px;
+      margin: 15px 0;
     }
   }
 }
